- added UI (JavaFX+Gradle) (UI test failed)